crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/016.cypher
MATCH (n) DETACH DELETE n; CREATE (a:Foo)
